# realworldarchive

./: .gitignore  Cargo.toml  Design outline.txt  LICENSE.md  README.md  Synthetic stress test for bardecoder.xcf  vscode.code-workspace
src/: archive_human_input_file.rs  archive_human_output_file.rs  color_multiplexer.rs  data_file.rs  file_decoder.rs  grayscale_recognizer.rs  input_file_reader.rs  main.rs  output_file_writer.rs  page_barcode_packer.rs  page_organizer.rs  stress_test_page.rs
