[package]
name = "realworldarchive"
version = "0.1.0"
authors = ["KyleMaas <kylemaasdev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0+ OR Zlib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qrencode = "0.14.0"
# quirs = "0.1.1"
# rqrr = "0.2.0"
# bardecoder = "0.2.1"
# bardecoder = { version = "0.2.2", path = "../bardecoder", features = [ ] }
# bardecoder = { version = "0.2.2", path = "../bardecoder-0.2.2" }
bardecoder = "0.5.0"
reed-solomon = "0.2.1"
clap = "2.33.0"
image = "0.24.6"
imageproc = "0.23.0"
rusttype = "0.9.3"
hsl = "0.1.1"
exoquant = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
positioned-io = "0.3.1"
crc32fast = "1.3.2"
gray-codes = "0.1.1"
glob = "0.3.1"
base45 = "3.1.0"